# RepliBuild.jl

./: .gitattributes  .gitignore  ARCHITECTURE.md  ARCHITECTURE_REDESIGN.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE_v1.1.txt  CONTRIBUTING.md  DEPENDENCY_CLEANUP.md  LICENSE  LIMITATIONS.md  LLMREADME.md  LocalPreferences.toml  MLIR_BUILD_NOTES.md  MLIR_INTEGRATION_STATUS.md  OPTIMIZATION_PLAN.md  PALADIN_INSTRUCTIONS.md  Project.toml  README.md  READY_TO_SHIP.md  RELEASE_NOTES_v1.1.md  RELEASE_v1.1.0.md  RepliBuild.jl.code-workspace  SESSION_SUMMARY.md  TODO.md  TOML_CONFIGURATION_KEYS.md  benchmark_results.md  check_code_llvm.jl  check_deps.jl  dwarf_dump.txt  fix.jl  release.sh  replibuild.toml  run_bench_llvm.jl  run_sonnet_lto.sh  test2.bc  test_capture_perf.jl  test_llvmcall_perf.jl  (+2 more)
.github/workflows/: CompatHelper.yml  TagBot.yml  docs.yml
daemons/clients/: daemon_client.jl
daemons/handlers/: reactive_handler.jl
daemons/servers/: compilation_daemon.jl  discovery_daemon.jl  orchestrator_daemon.jl  setup_daemon.jl
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/api/: index.html
dev/architecture/: index.html
dev/benchmarks/: index.html
dev/config/: index.html
dev/guide/: index.html
dev/how-it-works/: index.html
dev/inheritance-abi/: index.html
dev/internals/: index.html
dev/introspect/: index.html
dev/mlir/: index.html
dev/release-notes/: index.html
dev/using-wrappers/: index.html
dev/why-replibuild/: index.html
docs/: API.md  API_UNIFIED.md  ARCHITECTURE.md  BINDING_VALIDATION_2025-11-26.md  BINDING_VALIDATION_REPORT.txt  BUILD_GUIDE.md  DEEP_TECHNICAL_ANALYSIS.md  DESIGN_DECISIONS.md  DIRECTORY_STRUCTURE.md  EIGEN_VALIDATION.md  EX.md  FFI_ACCURACY_ROADMAP.md  FFI_STATUS_SUMMARY.md  JLCS_UNIVERSAL_FFI.md  LIMITATIONS.md  MODERN_BUILD_PHILOSOPHY.md  MODULAR.md  MODULARIZED_COMPILER_TEST_SUMMARY.md  MODULE_REGISTRY.md  MODULE_SYSTEM.md  Manifest.toml  Project.toml  QUICKSTART.md  QUICK_START.md  README.md  REAL_OUTPUT.md  REGISTRY_PREP.md  RepliBuild.md  SQLITESTUDIO_VIABILITY_PLAN.md  STRESS_TEST_RESULTS.md  TECHNICAL_INDEX.md  TECHNICAL_SUMMARY.txt  TESTING_FINDINGS.md  TYPE_VALIDATION_IMPLEMENTED.md  TestAdvanced.jl  USAGE.md  WRAPPER_REDESIGN.md  benchmark_results.md  benchmarks.csv  dialect_review.md  (+5 more)
docs/examples/: 01_simple_math.md  02_structs_and_classes.md  README.md  StructTest.jl
docs/mlir/: EXAMPLES.md  INDEX.md  LLVM21_MIGRATION.md  README.md  TABLEGEN_GUIDE.md
docs/src/: api.md  architecture.md  benchmarks.md  config.md  guide.md  how-it-works.md  index.md  inheritance-abi.md  internals.md  introspect.md  mlir.md  release-notes.md  using-wrappers.md  why-replibuild.md
docs/updates/: 2026-07-17-multiple-inheritance-and-vcall.md  2026-07-17-stl-test-regression.md  2026-07-17-virtual-inheritance.md
julia/: compilation_metadata.json
modules/: Boost.toml  README.md  Zlib.toml
replibuild/: BuildSystemDelegate.jl  ModuleRegistry.jl  ModuleTemplateGenerator.jl  config.toml
scripts/: AgentControl.jl  bootstrap_error_db.jl  generate_common_modules.jl
src/: ASTWalker.jl  Bridge_LLVM.jl  Bridge_LLVM.jl.backup  BuildBridge.jl  BuildHelpers.jl  BuildSystemDelegate.jl  Builder.jl  CMakeParser.jl  ClangJLBridge.jl  Compiler.jl  ConfigurationManager.jl  DWARFParser.jl  DaemonManager.jl  DependencyResolver.jl  Discovery.jl  EnvironmentDoctor.jl  ErrorLearning.jl  Hub.jl  IRGen.jl  Introspect.jl  JITManager.jl  JLCSIRGenerator.jl  JuliaWrapItUp.jl  LLVMEnvironment.jl  LLVMake.jl  MLIRNative.jl  MLIRNativeSimple.jl  ModuleRegistry.jl  ModuleTemplateGenerator.jl  PackageRegistry.jl  ProjectWizard.jl  REPL_API.jl  RepliBuild.jl  RepliBuildPaths.jl  STLWrappers.jl  Scaffold.jl  Templates.jl  UXHelpers.jl  WorkspaceBuilder.jl  Wrapper.jl
src/Mlir/: CMakeLists.txt  JLCSCHelpers.cpp  JLCSDialect.cpp  JLCSDialect.h  JLCSDialect.td  JLCSOps.cpp  JLCSOps.h  JLCSOps.td  JLCSPasses.cpp  JLCSTypes.cpp  JLCSTypes.td  JLInterfaces.td  LowerToLLVMPass.cpp  QUICKSTART.md  README.md
src/mlir/: CMakeLists.txt  JLCS.td  JLCSDialect.td  JLCSOps.td  JLInterfaces.td  README.md  Types.td  build.sh
src/mlir/.cache/clangd/index/: AOTCompiler.cpp.95A66ACDF4D205A9.idx  JLCSCAPIWrappers.cpp.26D7F1C4EFBCACF5.idx  JLCSCAPIWrappers.cpp.57885E4AF0766025.idx  JLCSCHelpers.cpp.5A6CBA622BD9E302.idx  JLCSDialect.cpp.BE2BE9CD593A97FB.idx  JLCSDialect.cpp.C6808FFD2884F3F5.idx  JLCSDialect.h.CC7292CC8F036E5A.idx  JLCSDialect.h.F7F64F72C3A73D3F.idx  JLCSLoweringUtils.h.010DFABCFE155788.idx  JLCSLoweringUtils.h.4733A0AC118A8EE8.idx  JLCSOps.cpp.629E4363999FEAAA.idx  JLCSOps.cpp.A252A0EF02F79879.idx  JLCSOps.h.03C317701FD1BB35.idx  JLCSOps.h.B9F125097E5D4494.idx  JLCSPasses.cpp.054793B11F645F5C.idx  JLCSPasses.cpp.C057378B13CB127C.idx  JLCSTypes.cpp.6A8B8DE7624B72DB.idx  JLCSTypes.cpp.B01536E94FB2AE6E.idx  JLCSTypes.h.181EFB3B242BE08D.idx  JLCSTypes.h.2CD0D47B3D0FD143.idx
src/mlir/IR/: JLCSDialect.h  JLCSLoweringUtils.h  JLCSOps.h  JLCSTypes.h  tablegen_compile_commands.yml
src/mlir/impl/: AOTCompiler.cpp  JLCSCAPIWrappers.cpp  JLCSDialect.cpp  JLCSOps.cpp  JLCSPasses.cpp  JLCSTypes.cpp
sysimage/: build_sysimage.jl  precompile_jmake.jl
test/: FINDINGS.md  README.md  SUMMARY.txt  WRAPPER_QUALITY.md  build_and_wrap.jl  devtests.jl  dwarf_test.cpp  dwarfdump_full.txt  pugixml_test.jl  readelf_full.txt  replibuild.toml  replibuild_extraction.json  replibuild_test.toml  run_comprehensive.jl  runtests.jl  tag_comparison.txt  test_abi_nested.jl  test_advanced_extraction.jl  test_advanced_types.cpp  test_aot.jl  test_bindings.jl  test_bindings_simple.jl  test_bindings_validation.jl  test_build_delegation.jl  test_c_generator_policies.jl  test_c_inprocess.jl  test_cache_invalidation.jl  test_ccall_perf.jl  test_config.toml  test_convenience_overloads.jl  test_dep_cache.jl  test_dwarf.jl  test_error_learning.jl  test_generate_bindings.jl  test_ingest.jl  test_jlcs_invariants.jl  test_jlcs_producers.jl  test_mlir.jl  test_mlir_safety.jl  test_mlir_templates.jl  (+15 more)
test/mwe_cpp/: CMakeLists.txt  build.sh
(+291 files in other folders)
